--- a/index.html
+++ b/index.html
@@ -163,7 +163,6 @@
        <div class="about-text-container about-opacity">
        <div class="about-text-header">
 Hi, i'm a 14 year old Website developer.
-One day I want to become a professional App/Website builder.
        </div>
        <div class="about-text-paragraph">
         One day I want to become a professional App/Website builder. 
@@ -221,6 +220,21 @@ One day I want to become a professional App/Website builder.
            <div class="slides">
              <img src="images/marine-image-two.webp" alt="marine-image">
            </div>
+           <div class="slides">
+            <img src="images/marine-image-four.jpg" alt="marine-image">
+          </div>
+          <div class="slides">
+            <img src="images/marine-image-seven.jpg" alt="marine-image">
+          </div>
+          <div class="slides">
+            <img src="images/marine-image-eight.jpg" alt="marine-image">
+          </div>
+          <div class="slides">
+            <img src="images/marine-image-nine.jpg" alt="marine-image">
+          </div>
+          <div class="slides">
+            <img src="images/marine-image-ten.jpg" alt="marine-image">
+          </div>
          </div>
         
          </div>
@@ -269,6 +283,21 @@ One day I want to become a professional App/Website builder.
    <div class="forest-slides">
      <img src="images/forest-image-six.webp" alt="marine-image">
    </div>
+   <div class="forest-slides">
+    <img src="images/forest-image-four.jpg" alt="marine-image">
+  </div>
+  <div class="forest-slides">
+    <img src="images/forest-image-seven.jpg" alt="marine-image">
+  </div>
+  <div class="forest-slides">
+    <img src="images/forest-image-eight.jpg" alt="marine-image">
+  </div>
+  <div class="forest-slides">
+    <img src="images/forest-image-nine.jpg" alt="marine-image">
+  </div>
+  <div class="forest-slides">
+    <img src="images/forest-image-ten.jpg" alt="marine-image">
+  </div>
  </div>
 
  </div>
@@ -320,6 +349,21 @@ One day I want to become a professional App/Website builder.
    <div class="wildlife-slides">
      <img src="images/wildlife-image-six.webp" alt="marine-image">
    </div>
+   <div class="wildlife-slides">
+    <img src="images/wildlife-image-one.jpg" alt="marine-image">
+  </div>
+  <div class="wildlife-slides">
+    <img src="images/wildlife-image-seven.jpg" alt="marine-image">
+  </div>
+  <div class="wildlife-slides">
+    <img src="images/wildlife-image-eight.jpg" alt="marine-image">
+  </div>
+  <div class="wildlife-slides">
+    <img src="images/wildlife-image-nine.jpg" alt="marine-image">
+  </div>
+  <div class="wildlife-slides">
+    <img src="images/wildlife-image-ten.jpg" alt="marine-image">
+  </div>
  </div>
 
  </div>
@@ -369,6 +413,24 @@ One day I want to become a professional App/Website builder.
    <div class="city-slides">
      <img src="images/car-four.jpg" alt="city-image">
    </div>
+   <div class="city-slides">
+    <img src="images/car-five.jpg" alt="city-image">
+  </div>
+  <div class="city-slides">
+    <img src="images/car-six.jpg" alt="city-image">
+  </div>
+  <div class="city-slides">
+    <img src="images/car-seven.jpg" alt="city-image">
+  </div>
+  <div class="city-slides">
+    <img src="images/car-eight.jpg" alt="city-image">
+  </div>
+  <div class="city-slides">
+    <img src="images/car-nine.jpg" alt="city-image">
+  </div>
+  <div class="city-slides">
+    <img src="images/car-ten.jpg" alt="city-image">
+  </div>
  </div>
 
  </div>
@@ -569,3 +631,4 @@ One day I want to become a professional App/Website builder.
     
   </body>
 </html>
+
